--- a/src/templates/imageCard.hbs
+++ b/src/templates/imageCard.hbs
@@ -1,24 +1,32 @@
-<li class="gallery__item">
-    <div class="photo-card">
-        <img class="image" src={{webformatURL}} alt="" data-src={{largeImageURL}} />
-
-        <div class="stats">
-            <p class="stats-item">
-                <i class="material-icons lightblue">thumb_up</i>
-                {{likes}}
-            </p>
-            <p class="stats-item">
-                <i class="material-icons skyblue">visibility</i>
-                {{views}}
-            </p>
-            <p class="stats-item">
-                <i class="material-icons powderblue">comment</i>
-                {{comments}}
-            </p>
-            <p class="stats-item">
-                <i class="material-icons rgb">cloud_download</i>
-                {{downloads}}
-            </p>
-        </div>
-    </div>
-</li>
+<figure>
+  <img
+    class='image'
+    src={{webformatURL}}
+    loading="lazy"
+    alt=''
+    height='275'
+    data-src={{largeImageURL}}
+  />
+  <figcaption>
+    <p class='stats-item'>
+      <i class='material-icons lightblue'>likes </i>
+      {{' '}}
+      {{likes}}
+    </p>
+    <p class='stats-item'>
+      <i class='material-icons skyblue'>views </i>
+      {{' '}}
+      {{views}}
+    </p>
+    <p class='stats-item'>
+      <i class='material-icons powderblue'>comments </i>
+      {{' '}}
+      {{comments}}
+    </p>
+    <p class='stats-item'>
+      <i class='material-icons rgb'>downloads </i>
+      {{' '}}
+      {{downloads}}
+    </p>
+  </figcaption>
+</figure>
