--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,8 @@
+@font-face{
+  font-family: "Leckerli One";
+  src: url("../font/LeckerliOne-Regular.ttf") format("truetype");
+}
+
 *,
 ::after,
 ::before {
