add overflow for body

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,11 @@
   src: url("../font/LeckerliOne-Regular.ttf") format("truetype");
 }
 
+body {
+  overflow: hidden;
+  overflow-y: auto;
+}
+
 *,
 ::after,
 ::before {
